# birthday-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  diesel.toml  docker-compose.yml
.forgejo/workflows/: build-latest.yml
.github/workflows/: build-latest.yml
migrations/2025-04-11-221626_initial_setup/: down.sql  up.sql
src/: commands.rs  main.rs  models.rs  schema.rs
src/commands/: guild.rs  ping.rs  register.rs  select.rs
