[package]
name = "birthday-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.2.9", features = ["chrono"] }
diesel-async = { version = "0.5.2", features = ["postgres", "pool", "deadpool"] }
dotenvy = "0.15"
poise = "0.6.1"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"]}
chrono = "0.4.40"
